# x-insights

./: .gitignore  LICENSE
aspera/: alembic.ini  pyproject.toml
aspera/alembic/: env.py
aspera/alembic/versions/: 0f11de865b4e_add_column_status.py  67942a72c813_server_default.py  990cfd883ca4_add_chat_model.py  c96bde2d8fdb_initial_migration.py  e554208da77a_initial_migration.py
aspera/app/: crud.py  db.py  dependencies.py  main.py  settings.py
aspera/app/llama/: callback_handlers.py  engine.py  injestion.py  tools.py
aspera/app/models/: base.py  chat.py  document.py
aspera/app/routers/: chat.py  document.py
aspera/app/schemas/: base.py  chat.py  document.py
aspera/app/scripts/: ingest.py  parse_md.py  retrive.py
aspera/app/utils/: document.py  prompt.py
